adjusted nav padding to 0em, solved nav style issues on ios

--- a/src/components/Nav/index.css
+++ b/src/components/Nav/index.css
@@ -58,6 +58,6 @@
   and (max-device-width: 667px) 
   and (-webkit-min-device-pixel-ratio: 2) { 
  .btn-nav {
-    font-size: 2em;
+    padding: 0em;
  }
 }
